--- a/Extension/ToolWindow/ToolWindow1Control.xaml
+++ b/Extension/ToolWindow/ToolWindow1Control.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Extension.ToolWindow1Control"
+﻿<UserControl x:Class="ToolWindow.ToolWindow1Control"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -9,10 +9,12 @@
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300"
              Name="MyToolWindow">
-    <Grid>
-        <StackPanel Orientation="Vertical">
-            <TextBlock Margin="10" HorizontalAlignment="Center">ToolWindow1</TextBlock>
-            <Button Content="Click me!" Click="button1_Click" Width="120" Height="80" Name="button1"/>
-        </StackPanel>
+    <Grid HorizontalAlignment="Center" Width="300" RenderTransformOrigin="0,0.494">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="Auto" MinHeight="85"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Your bookmarks:" FontSize="16" Margin="10" Grid.Row="0" />
+        <StackPanel x:Name="DynamicButtonStackPanel" Grid.Row="1" Margin="10" />
     </Grid>
 </UserControl>
